// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iterateReccurences Tests Frequency iteration correctly iterates over the end of month 1`] = `
[
  2027-01-31T00:00:00.000Z,
  2027-02-28T00:00:00.000Z,
  2027-03-31T00:00:00.000Z,
  2027-04-30T00:00:00.000Z,
  2027-05-31T00:00:00.000Z,
  2027-06-30T00:00:00.000Z,
  2027-07-31T00:00:00.000Z,
  2027-08-31T00:00:00.000Z,
  2027-09-30T00:00:00.000Z,
  2027-10-31T00:00:00.000Z,
  2027-11-30T00:00:00.000Z,
  2027-12-31T00:00:00.000Z,
  2028-01-31T00:00:00.000Z,
  2028-02-29T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration correctly iterates yearly over February 29 1`] = `
[
  2028-02-29T00:00:00.000Z,
  2029-02-28T00:00:00.000Z,
  2030-02-28T00:00:00.000Z,
  2031-02-28T00:00:00.000Z,
  2032-02-29T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration correctly skips leap year in 1900 1`] = `
[
  1896-02-29T00:00:00.000Z,
  1897-02-28T00:00:00.000Z,
  1898-02-28T00:00:00.000Z,
  1899-02-28T00:00:00.000Z,
  1900-02-28T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration iterates for DAILY frequency 1`] = `
[
  2028-02-01T00:00:00.000Z,
  2028-02-02T00:00:00.000Z,
  2028-02-03T00:00:00.000Z,
  2028-02-04T00:00:00.000Z,
  2028-02-05T00:00:00.000Z,
  2028-02-06T00:00:00.000Z,
  2028-02-07T00:00:00.000Z,
  2028-02-08T00:00:00.000Z,
  2028-02-09T00:00:00.000Z,
  2028-02-10T00:00:00.000Z,
  2028-02-11T00:00:00.000Z,
  2028-02-12T00:00:00.000Z,
  2028-02-13T00:00:00.000Z,
  2028-02-14T00:00:00.000Z,
  2028-02-15T00:00:00.000Z,
  2028-02-16T00:00:00.000Z,
  2028-02-17T00:00:00.000Z,
  2028-02-18T00:00:00.000Z,
  2028-02-19T00:00:00.000Z,
  2028-02-20T00:00:00.000Z,
  2028-02-21T00:00:00.000Z,
  2028-02-22T00:00:00.000Z,
  2028-02-23T00:00:00.000Z,
  2028-02-24T00:00:00.000Z,
  2028-02-25T00:00:00.000Z,
  2028-02-26T00:00:00.000Z,
  2028-02-27T00:00:00.000Z,
  2028-02-28T00:00:00.000Z,
  2028-02-29T00:00:00.000Z,
  2028-03-01T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration iterates for HOURLY frequency 1`] = `
[
  2028-02-01T00:00:00.000Z,
  2028-02-01T01:00:00.000Z,
  2028-02-01T02:00:00.000Z,
  2028-02-01T03:00:00.000Z,
  2028-02-01T04:00:00.000Z,
  2028-02-01T05:00:00.000Z,
  2028-02-01T06:00:00.000Z,
  2028-02-01T07:00:00.000Z,
  2028-02-01T08:00:00.000Z,
  2028-02-01T09:00:00.000Z,
  2028-02-01T10:00:00.000Z,
  2028-02-01T11:00:00.000Z,
  2028-02-01T12:00:00.000Z,
  2028-02-01T13:00:00.000Z,
  2028-02-01T14:00:00.000Z,
  2028-02-01T15:00:00.000Z,
  2028-02-01T16:00:00.000Z,
  2028-02-01T17:00:00.000Z,
  2028-02-01T18:00:00.000Z,
  2028-02-01T19:00:00.000Z,
  2028-02-01T20:00:00.000Z,
  2028-02-01T21:00:00.000Z,
  2028-02-01T22:00:00.000Z,
  2028-02-01T23:00:00.000Z,
  2028-02-02T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration iterates for MINUTELY frequency 1`] = `
[
  2028-02-01T00:00:00.000Z,
  2028-02-01T00:01:00.000Z,
  2028-02-01T00:02:00.000Z,
  2028-02-01T00:03:00.000Z,
  2028-02-01T00:04:00.000Z,
  2028-02-01T00:05:00.000Z,
  2028-02-01T00:06:00.000Z,
  2028-02-01T00:07:00.000Z,
  2028-02-01T00:08:00.000Z,
  2028-02-01T00:09:00.000Z,
  2028-02-01T00:10:00.000Z,
  2028-02-01T00:11:00.000Z,
  2028-02-01T00:12:00.000Z,
  2028-02-01T00:13:00.000Z,
  2028-02-01T00:14:00.000Z,
  2028-02-01T00:15:00.000Z,
  2028-02-01T00:16:00.000Z,
  2028-02-01T00:17:00.000Z,
  2028-02-01T00:18:00.000Z,
  2028-02-01T00:19:00.000Z,
  2028-02-01T00:20:00.000Z,
  2028-02-01T00:21:00.000Z,
  2028-02-01T00:22:00.000Z,
  2028-02-01T00:23:00.000Z,
  2028-02-01T00:24:00.000Z,
  2028-02-01T00:25:00.000Z,
  2028-02-01T00:26:00.000Z,
  2028-02-01T00:27:00.000Z,
  2028-02-01T00:28:00.000Z,
  2028-02-01T00:29:00.000Z,
  2028-02-01T00:30:00.000Z,
  2028-02-01T00:31:00.000Z,
  2028-02-01T00:32:00.000Z,
  2028-02-01T00:33:00.000Z,
  2028-02-01T00:34:00.000Z,
  2028-02-01T00:35:00.000Z,
  2028-02-01T00:36:00.000Z,
  2028-02-01T00:37:00.000Z,
  2028-02-01T00:38:00.000Z,
  2028-02-01T00:39:00.000Z,
  2028-02-01T00:40:00.000Z,
  2028-02-01T00:41:00.000Z,
  2028-02-01T00:42:00.000Z,
  2028-02-01T00:43:00.000Z,
  2028-02-01T00:44:00.000Z,
  2028-02-01T00:45:00.000Z,
  2028-02-01T00:46:00.000Z,
  2028-02-01T00:47:00.000Z,
  2028-02-01T00:48:00.000Z,
  2028-02-01T00:49:00.000Z,
  2028-02-01T00:50:00.000Z,
  2028-02-01T00:51:00.000Z,
  2028-02-01T00:52:00.000Z,
  2028-02-01T00:53:00.000Z,
  2028-02-01T00:54:00.000Z,
  2028-02-01T00:55:00.000Z,
  2028-02-01T00:56:00.000Z,
  2028-02-01T00:57:00.000Z,
  2028-02-01T00:58:00.000Z,
  2028-02-01T00:59:00.000Z,
  2028-02-01T01:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration iterates for MONTHLY frequency 1`] = `
[
  2028-02-01T00:00:00.000Z,
  2028-03-01T00:00:00.000Z,
  2028-04-01T00:00:00.000Z,
  2028-05-01T00:00:00.000Z,
  2028-06-01T00:00:00.000Z,
  2028-07-01T00:00:00.000Z,
  2028-08-01T00:00:00.000Z,
  2028-09-01T00:00:00.000Z,
  2028-10-01T00:00:00.000Z,
  2028-11-01T00:00:00.000Z,
  2028-12-01T00:00:00.000Z,
  2029-01-01T00:00:00.000Z,
  2029-02-01T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration iterates for SECONDLY frequency 1`] = `
[
  2028-02-01T00:00:00.000Z,
  2028-02-01T00:00:01.000Z,
  2028-02-01T00:00:02.000Z,
  2028-02-01T00:00:03.000Z,
  2028-02-01T00:00:04.000Z,
  2028-02-01T00:00:05.000Z,
  2028-02-01T00:00:06.000Z,
  2028-02-01T00:00:07.000Z,
  2028-02-01T00:00:08.000Z,
  2028-02-01T00:00:09.000Z,
  2028-02-01T00:00:10.000Z,
  2028-02-01T00:00:11.000Z,
  2028-02-01T00:00:12.000Z,
  2028-02-01T00:00:13.000Z,
  2028-02-01T00:00:14.000Z,
  2028-02-01T00:00:15.000Z,
  2028-02-01T00:00:16.000Z,
  2028-02-01T00:00:17.000Z,
  2028-02-01T00:00:18.000Z,
  2028-02-01T00:00:19.000Z,
  2028-02-01T00:00:20.000Z,
  2028-02-01T00:00:21.000Z,
  2028-02-01T00:00:22.000Z,
  2028-02-01T00:00:23.000Z,
  2028-02-01T00:00:24.000Z,
  2028-02-01T00:00:25.000Z,
  2028-02-01T00:00:26.000Z,
  2028-02-01T00:00:27.000Z,
  2028-02-01T00:00:28.000Z,
  2028-02-01T00:00:29.000Z,
  2028-02-01T00:00:30.000Z,
  2028-02-01T00:00:31.000Z,
  2028-02-01T00:00:32.000Z,
  2028-02-01T00:00:33.000Z,
  2028-02-01T00:00:34.000Z,
  2028-02-01T00:00:35.000Z,
  2028-02-01T00:00:36.000Z,
  2028-02-01T00:00:37.000Z,
  2028-02-01T00:00:38.000Z,
  2028-02-01T00:00:39.000Z,
  2028-02-01T00:00:40.000Z,
  2028-02-01T00:00:41.000Z,
  2028-02-01T00:00:42.000Z,
  2028-02-01T00:00:43.000Z,
  2028-02-01T00:00:44.000Z,
  2028-02-01T00:00:45.000Z,
  2028-02-01T00:00:46.000Z,
  2028-02-01T00:00:47.000Z,
  2028-02-01T00:00:48.000Z,
  2028-02-01T00:00:49.000Z,
  2028-02-01T00:00:50.000Z,
  2028-02-01T00:00:51.000Z,
  2028-02-01T00:00:52.000Z,
  2028-02-01T00:00:53.000Z,
  2028-02-01T00:00:54.000Z,
  2028-02-01T00:00:55.000Z,
  2028-02-01T00:00:56.000Z,
  2028-02-01T00:00:57.000Z,
  2028-02-01T00:00:58.000Z,
  2028-02-01T00:00:59.000Z,
  2028-02-01T00:01:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration iterates for WEEKLY frequency 1`] = `
[
  2028-02-01T00:00:00.000Z,
  2028-02-08T00:00:00.000Z,
  2028-02-15T00:00:00.000Z,
  2028-02-22T00:00:00.000Z,
  2028-02-29T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Frequency iteration iterates for YEARLY frequency 1`] = `
[
  2028-02-01T00:00:00.000Z,
  2029-02-01T00:00:00.000Z,
  2030-02-01T00:00:00.000Z,
  2031-02-01T00:00:00.000Z,
  2032-02-01T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Bi-weekly Friday 1`] = `
[
  2026-02-27T00:00:00.000Z,
  2026-03-13T00:00:00.000Z,
  2026-03-27T00:00:00.000Z,
  2026-04-10T00:00:00.000Z,
  2026-04-24T00:00:00.000Z,
  2026-05-08T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Complex multiple BY rules 1`] = `
[
  2026-06-01T00:00:00.000Z,
  2026-06-15T00:00:00.000Z,
  2026-12-01T00:00:00.000Z,
  2026-12-15T00:00:00.000Z,
  2027-06-01T00:00:00.000Z,
  2027-06-15T00:00:00.000Z,
  2027-12-01T00:00:00.000Z,
  2027-12-15T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Daily basic 1`] = `
[
  2026-02-23T00:00:00.000Z,
  2026-02-24T00:00:00.000Z,
  2026-02-25T00:00:00.000Z,
  2026-02-26T00:00:00.000Z,
  2026-02-27T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Daily with interval 1`] = `
[
  2026-02-23T00:00:00.000Z,
  2026-02-25T00:00:00.000Z,
  2026-02-27T00:00:00.000Z,
  2026-03-01T00:00:00.000Z,
  2026-03-03T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Every second weekend with weekstart on Monday 1`] = `
[
  2026-02-28T00:00:00.000Z,
  2026-03-01T00:00:00.000Z,
  2026-03-14T00:00:00.000Z,
  2026-03-15T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Every second weekend with weekstart on Sunday 1`] = `
[
  2026-02-28T00:00:00.000Z,
  2026-03-08T00:00:00.000Z,
  2026-03-14T00:00:00.000Z,
  2026-03-22T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Leap year February 29 1`] = `
[
  2028-02-29T00:00:00.000Z,
  2032-02-29T00:00:00.000Z,
  2036-02-29T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Monthly last day 1`] = `
[
  2026-02-28T00:00:00.000Z,
  2026-03-31T00:00:00.000Z,
  2026-04-30T00:00:00.000Z,
  2026-05-31T00:00:00.000Z,
  2026-06-30T00:00:00.000Z,
  2026-07-31T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Monthly specific date 1`] = `
[
  2026-03-15T00:00:00.000Z,
  2026-04-15T00:00:00.000Z,
  2026-05-15T00:00:00.000Z,
  2026-06-15T00:00:00.000Z,
  2026-07-15T00:00:00.000Z,
  2026-08-15T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Next 5 Last Sunday of March 1`] = `
[
  2026-03-29T00:00:00.000Z,
  2027-03-28T00:00:00.000Z,
  2028-03-26T00:00:00.000Z,
  2029-03-25T00:00:00.000Z,
  2030-03-31T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Quarterly first day 1`] = `
[
  2026-05-01T00:00:00.000Z,
  2026-08-01T00:00:00.000Z,
  2026-11-01T00:00:00.000Z,
  2027-02-01T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Time-bounded weekly 1`] = `
[
  2026-02-24T00:00:00.000Z,
  2026-03-03T00:00:00.000Z,
  2026-03-10T00:00:00.000Z,
  2026-03-17T00:00:00.000Z,
  2026-03-24T00:00:00.000Z,
  2026-03-31T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Today but only in January, June and August 1`] = `
[
  2026-06-23T00:00:00.000Z,
  2026-08-23T00:00:00.000Z,
  2027-01-23T00:00:00.000Z,
  2027-06-23T00:00:00.000Z,
  2027-08-23T00:00:00.000Z,
  2028-01-23T00:00:00.000Z,
  2028-06-23T00:00:00.000Z,
  2028-08-23T00:00:00.000Z,
  2029-01-23T00:00:00.000Z,
  2029-06-23T00:00:00.000Z,
  2029-08-23T00:00:00.000Z,
  2030-01-23T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Weekly weekdays 1`] = `
[
  2026-02-23T00:00:00.000Z,
  2026-02-25T00:00:00.000Z,
  2026-02-27T00:00:00.000Z,
  2026-03-02T00:00:00.000Z,
  2026-03-04T00:00:00.000Z,
  2026-03-06T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Weekly weekends 1`] = `
[
  2026-02-28T00:00:00.000Z,
  2026-03-01T00:00:00.000Z,
  2026-03-07T00:00:00.000Z,
  2026-03-08T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Weekly with WKST 1`] = `
[
  2026-02-23T00:00:00.000Z,
  2026-03-02T00:00:00.000Z,
  2026-03-09T00:00:00.000Z,
  2026-03-16T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Yearly Christmas 1`] = `
[
  2026-02-25T00:00:00.000Z,
  2027-02-25T00:00:00.000Z,
  2028-02-25T00:00:00.000Z,
]
`;

exports[`iterateReccurences Tests Should correctly generate RRule recurrences for Yearly Thanksgiving 1`] = `
[
  2026-11-26T00:00:00.000Z,
  2027-11-25T00:00:00.000Z,
  2028-11-23T00:00:00.000Z,
]
`;
